# one-click-ninja

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: sources.md
assets/Samurai02/: ReadMe.txt
assets/fonts/fiendish/: Fiendish Font Info and Read Me - Sinister Fonts.txt
assets/sfx/aargh/: aargh.txt
assets/sprites/lpc-medieval-fantasy-character/our_work/: README.md  gen.py
src/: action_spinner.rs  components.rs  enemy.rs  events.rs  fight_display.rs  game_over.rs  game_state.rs  gamestate.rs  loading.rs  main.rs  music.rs  player.rs  resources.rs  types.rs
src/systems/: animate_sprite_sheet.rs  countdown.rs  damage.rs  despawn_after.rs  menu.rs  mod.rs  setup.rs
