[package]
name = "one-click-ninja"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "bevy_kira_audio/mp3",
]

web = [
    "bevy_webgl2",
]

native = [
    "bevy/bevy_wgpu",
]

diagnostics = []

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_asset_loader = { version = "0.6.0" }
bevy_kira_audio = { version = "0.6.0" }
bevy_webgl2 = { version = "0.5.0", optional = true }
env_logger = "0.9.0"
log = "0.4.8"
rand = "0.8.4"
tracing-wasm = "=0.2.0" #Newer versions broken on bevy 0.5. Fix in 0.6
